# internal/adapter/persistence/postgres/model/template_detail_model.go
@@ -7,15 +7,16 @@ import (
 )
 
 type TemplateDetailModel struct {
-	ID           int       `gorm:"primaryKey;autoIncrement"`
-	TemplateID   int       `gorm:"type:integer;not null;index"`
-	DayOfWeek    int16     `gorm:"type:smallint;not null"`
-	ExerciseID   int       `gorm:"type:integer;not null"`
-	Sets         int16     `gorm:"type:smallint;not null"`
-	Reps         int16     `gorm:"type:smallint;not null"`
-	DisplayOrder int16     `gorm:"type:smallint;not null"`
-	CreatedAt    time.Time `gorm:"type:timestamptz;autoCreateTime"`
-	UpdatedAt    time.Time `gorm:"type:timestamptz;autoUpdateTime"`
+	ID           int            `gorm:"primaryKey;autoIncrement"`
+	TemplateID   int            `gorm:"type:integer;not null;index"`
+	Template     *TemplateModel `gorm:"constraint:OnDelete:CASCADE;foreignKey:TemplateID"`
+	DayOfWeek    int16          `gorm:"type:smallint;not null"`
+	ExerciseID   int            `gorm:"type:integer;not null"`
+	Sets         int16          `gorm:"type:smallint;not null"`
+	Reps         int16          `gorm:"type:smallint;not null"`
+	DisplayOrder int16          `gorm:"type:smallint;not null"`
+	CreatedAt    time.Time      `gorm:"type:timestamptz;autoCreateTime"`
+	UpdatedAt    time.Time      `gorm:"type:timestamptz;autoUpdateTime"`
 }
 
 func (TemplateDetailModel) TableName() string {
